--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ server.port=80
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
+
+rsa.key.pukey=D:\\key\\pr_key.pub
+rsa.key.prkey=D:\\key\\pr_key
