--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,16 @@
             <scope>runtime</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-messaging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-messaging</artifactId>
+        </dependency>
+
         <!--处理日期工具包-->
         <dependency>
             <groupId>joda-time</groupId>
