--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
 pagehelper.supportMethodsArguments=true
 server.servlet.context-path=/api
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
 rsa.key.pukey=D:\\key\\pr_key.pub
 rsa.key.prkey=D:\\key\\pr_key
