--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=50MB
 rsa.key.pukey=D:\\key\\pr_key.pub
 rsa.key.prkey=D:\\key\\pr_key
+imgPath=D:/imgsave/
+#imgPath=/home/ubuntu/software/imgsave/
+#rsa.key.pukey=/home/ubuntu/software/key/pr_key.pub
+#rsa.key.prkey=/home/ubuntu/software/key/pr_key
