--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,17 @@ spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.url=jdbc:mysql:///mjyblog?useUnicode=true&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=m1234567890
-mybatis.configuration.log-impl=org.apache.ibatis.logging.log4j.Log4jImpl
+spring.datasource.initialSize=2
+spring.datasource.minIdle=2
+spring.datasource.maxActive=3
+spring.datasource.timeBetweenEvictionRunsMillis=60000
+spring.datasource.minEvictableIdleTimeMillis=30000
+spring.datasource.poolPreparedStatements=true
+spring.datasource.filters=stat,wall,log4j
+spring.datasource.maxPoolPreparedStatementPerConnectionSize=20
+spring.datasource.useGlobalDataSourceStat=true
+spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=500
+#mybatis.configuration.log-impl=org.apache.ibatis.logging.log4j.Log4jImpl
 server.port=80
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=true
@@ -13,6 +23,23 @@ spring.servlet.multipart.max-request-size=50MB
 rsa.key.pukey=D:\\key\\pr_key.pub
 rsa.key.prkey=D:\\key\\pr_key
 imgPath=D:/imgsave/
+# Redis\u6570\u636E\u5E93\u7D22\u5F15\uFF08\u9ED8\u8BA4\u4E3A0\uFF09
+spring.redis.database=0
+# Redis\u670D\u52A1\u5668\u5730\u5740
+spring.redis.host=192.168.0.24
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u7AEF\u53E3
+spring.redis.port=6379
+# Redis\u670D\u52A1\u5668\u8FDE\u63A5\u5BC6\u7801\uFF08\u9ED8\u8BA4\u4E3A\u7A7A\uFF09
+spring.redis.password=m1234567890
+# \u8FDE\u63A5\u6C60\u6700\u5927\u8FDE\u63A5\u6570\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.maxidle=5
+# \u8FDE\u63A5\u6C60\u6700\u5927\u963B\u585E\u7B49\u5F85\u65F6\u95F4\uFF08\u4F7F\u7528\u8D1F\u503C\u8868\u793A\u6CA1\u6709\u9650\u5236\uFF09
+spring.redis.jedis.pool.max-wait=-1
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5927\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.max-idle=5
+# \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
+spring.redis.jedis.pool.min-idle=1
+
 #imgPath=/home/ubuntu/software/imgsave/
 #rsa.key.pukey=/home/ubuntu/software/key/pr_key.pub
 #rsa.key.prkey=/home/ubuntu/software/key/pr_key
