--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <version>1-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>blog</name>
-    <description>Demo project for Spring Boot</description>
+    <description>project for Spring Boot</description>
 
     <properties>
         <java.version>1.8</java.version>
